# FRE-NCTools

./: .editorconfig  Makefile.am  configure.ac
.github/workflows/: main.yml
t/: Makefile.am  Test28-om_grid_gen.sh
tools/fregrid/: fregrid_util.c
tools/libfrencutils/: create_xgrid.c  create_xgrid.h  mosaic_util.c  mosaic_util.h  mpp_io.c
tools/make_coupler_mosaic/: make_coupler_mosaic.c
tools/make_hgrid/: create_gnomonic_cubic_grid.c  create_hgrid.h  make_hgrid.c
tools/make_quick_mosaic/: make_quick_mosaic.c
tools/remap_land/: remap_land.c
tools/simple_hydrog/add_lake/: Makefile.am  add_gages_from_table.f90  add_lake_data.f90  adj_gage_indices_reg.f90  cp_small_lake_frac.f90  cr_big_lake_index_file.f90  cr_big_lakes.f90  cr_big_lakes_latlon.f90  cr_ground_type_files.f90  cr_ground_type_files_reyn.f90  cr_lake_files_c720.f90  cr_lake_files_gage.f90  cr_lake_files_new.f90  cr_lake_frac_files_C48.f90  cr_lake_nc_from_idx.f90  cr_lake_nc_from_idx_chk_wbd.f90  cr_lake_wbd_inputs.f90  get_basins.f90  get_lake_cells.f90  get_lakes_large.f90  get_landf_diffs.f90  insert_lakes.f90  insert_lakes_3D.f90  mod_ground_fracs.f90  mod_lake_indices.f90  param.h  param_basin.h
tools/simple_hydrog/cp_elev/: Makefile.am  cp_elev_hzint.f90
tools/simple_hydrog/cp_slope/: Makefile.am  cp_slope_fields.f90
tools/simple_hydrog/mod_river/: Makefile.am  mod_river_network.f90
